Rename files to lowercase in client

--- a/5-server-structure/client/index.html
+++ b/5-server-structure/client/index.html
@@ -18,8 +18,8 @@
       </section>
     </main>
   </body>
-  <script defer src="js/CardManager.js"></script>
-  <script defer src="js/Bookmarks.js"></script>
+  <script defer src="js/card-manager.js"></script>
+  <script defer src="js/bookmarks.js"></script>
   <script defer src="js/app.js"></script>
   </script>
 </html>
